# Earning-Edge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEBUG_ALTERNATIVE_BUTTON.md  Dockerfile  Dockerfile.playwright  README.md  alembic.ini  dev.sh  docker-compose.yml  pyproject.toml  skills-lock.json  soroush_automation.md
.claude/: settings.json  settings.local.json
.playwright-cli/: page-2026-05-01T18-11-43-023Z.yml  page-2026-05-01T18-12-30-415Z.yml  page-2026-05-01T18-14-14-588Z.yml  page-2026-05-01T18-14-53-394Z.yml  page-2026-05-01T18-15-16-445Z.yml  page-2026-05-01T18-18-17-794Z.yml  page-2026-05-01T18-24-24-365Z.yml  page-2026-05-01T18-24-46-145Z.yml  page-2026-05-01T18-31-59-939Z.yml
alembic/: env.py
app/: main.py
dashboard/: .env.example  .gitignore  README.md  jest.config.ts  package-lock.json  package.json  test_payload.json
deploy/: README.md  docker-compose.prod.yml
docs/: PLAN_News.md  PLAN_QA_intraday_drift.md  PLAN_Strategy3.md  PLAN_position_management.md  PRD1.md  PRD2.md  Plan1.md  QA_instruction.md  dumb.md  final-traget-option.md  gp-target-option.md  improvement.md  news-poposed-solution.md  opus-target-option.md  research_sector_macro_options_strategies.md  soroush_report_general.md  strategy2.md  strategy3_Claude.md  strategy3_Codex.md  strategy3_Kimi.md  strategy3_combined.md  validation.md  validation2.md
research/: commodity_options_strategy_report.md  mean_reversion_volatility_contraction_report.md  momentum_options_strategies_report.md  research_report_dividend_calendar_strategies.md  short_premium_strategy_research.md  short_term_options_strategies_report.md
(+1594 files in other folders)
