[project]
name = "earning-edge"
version = "0.1.0"
description = "Telegram-based earnings options recommendation agent"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "cryptography>=43",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "freezegun>=1.5",
    "hypothesis>=6.115",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".agents", ".claude", "docs", "var", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = "(\\.agents|\\.claude|docs|var|alembic/versions)"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
